# bluesky-gradient

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
config/: generation.json
src/: cli.rs  config.rs  generator.py  gradient.rs  main.rs  render.rs
