[package]
name = "bluesky-gradient"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
imageproc = "0.25.0"
ab_glyph = "0.2.23"
palette = { version = "0.7.6", features = ["std"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
anyhow = "1.0.86"
rand = "0.8.5"
rusttype = "0.9.3"
